partners page UI

--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -1,60 +1,64 @@
-<section class="container-fluid container-launch-bt ost py-5 position-relative" id="discoverproducts" style="overflow: hidden">
+<section class="container-fluid container-industries ost pt-5 position-relative" id="discoverproducts" style="overflow: hidden">
   <div class="row align-items-center">
     <div class="col col-md-8 mx-auto text-center">
       <div class="row">
-        <div class="col-12">
-          <h1>Industries</h1>
-          <p>
+        <div class="col-12 col-md-8 mx-auto">
+          <h2 class="mb-4">Industries</h2>
+          <p class="mb-4">
             Your brand, your way. Establish your brand online with a custom token names and design. With instant access to hundreds of the best looking token icons and designs get complete control over your token look and feel.
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">CREATIVE & SOCIAL</div>
         </div>
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-loyalty"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">LOYALTY</div>
         </div>
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">DAPPS</div>
         </div>
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">MARKETPLACES</div>
         </div>
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-community"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">COMMUNITY</div>
         </div>
-        <div class="col-4">
-          <svg class="svg ost-kit-logo mb-2">
+        <div class="col-6 col-md-4 my-4">
+          <svg class="svg">
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sharing-economy"></use>
             </switch>
           </svg>
+          <div class="title-text mt-2">SHARING ECONOMY</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="ost-triangleSpace"></div>
-  <div class="ost-forward-triangle"></div>
 </section>
