--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -19,37 +19,87 @@
 
 .container-partner-companies{
   svg{
-    border: 1px solid green;
-    #facebook, #instagram {
+    #logo {
       background-color: red;
       fill: #111;
     }
     &:hover{
       background-color: red;
-      #facebook, #instagram {
+      #logo {
         fill: #fff;
       }
     }
   }
 }
 
+.ost-backward-triangle{
+  position: absolute;
+  left: -40px;
+  right: -40px;
+  top: -50px;
+  height: 100px;
+  transform: rotate(0.8deg);
+  background-color: $blue-900;
+  @media (max-width: 512px){
+    transform: rotate(3.6deg);
+  }
+  @media (min-width: 513px) and (max-width: 768px){
+    transform: rotate(2.8deg);
+  }
+  @media (min-width: 769px) and (max-width: 1024px){
+    transform: rotate(1.8deg);
+  }
+  @media (min-width: 1025px){
+    transform: rotate(2.2deg);
+  }
+  &.sky-blue{
+    background-color: $powder-blue;
+  }
+}
 
-.container-launch-bt{
+
+.container-industries{
   background-color: #34445b;
+  h2{
+    color: $white;
+  }
+  p{
+    color: $white;
+    font-size: 0.875rem;
+  }
+  svg{
+    height: 100px;
+    width: 100px;
+  }
+  .title-text{
+    color: $white;
+    font-weight: 400;
+    font-size: 0.875rem;
+    letter-spacing: 2px;
+  }
+}
+
+.container-partnering-ost{
+  background-color: #afe1e3;
+  .desc{
+    font-size: 0.875rem;
+    color: #597a84;
+  }
 }
 
 .container-contact-us {
-  background-color: $blue-1100;
+  background-color: $white;
   .custom-form{
     font-weight: $font-weight-normal;
   }
 
   p{
     letter-spacing: 1px;
+    color: $blue-800;
   }
 
   h2{
-    color: $white;
+    color: $cyan;
   }
 
   :focus {
@@ -81,7 +131,7 @@
     border: 0;
     padding: 0 0 5px;
     background-color: transparent;
-    border-bottom: 1px solid $casal;
+    border-bottom: 1px solid #d3e3e5;
   }
 
   .input ~ .input-border {
@@ -107,7 +157,7 @@
   }
   textarea{
     background-color: transparent;
-    border: 1px solid #3c5056;
+    border: 1px solid #d3e3e5;
     color: #3c5056;
   }
 
@@ -120,14 +170,4 @@
 .form-recapcha .form-recapcha-wrap div div {
   display: inline-block;
   width:auto !important;
-}
-
-.partnering_with_ost{
-  background-color: #afe1e3;
-  .desp_style{
-    font-size: 12px;
-    color: #597a84;
-  }
-
-
 }
