--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -1,4 +1,5 @@
-<div class="container-fluid" id="contactus">
+<div class="container-fluid position-relative" style="overflow:hidden;" id="contactus">
+  <div class="ost-backward-triangle sky-blue"></div>
   <div class="row container-contact-us py-5">
     <div class="container mx-auto">
       <div class="row">
