--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -1,56 +1,44 @@
-<div class="container-fluid partnering_with_ost">
+<div class="container-fluid container-partnering-ost">
 
-      <div class="container">
-        <div class="row  pt-4 pb-5">
-          <h3 class="col-12 text-center">
-            Partnering with OST
-          </h3>
+  <div class="row">
+    <div class="container">
+      <h3 class="text-center mt-5">Partnering with OST</h3>
+      <div class="row">
+        <div class="col-12 col-md-4 mt-5">
+          <div class="row ">
+            <div class="col-12 text-left text-md-center">
+              <img  class="mx-auto" style="height:75px;" src="container-partnering-ost-1@3x.png">
+              <h5 class="my-3">What do we work with?</h5>
+              <p class="desc">
+                Companies that have large online marketplaces and want to empower their users to participate in the platform’s economy and drive its growth.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="row">
-          <div class="col-4">
-            <div class="row ">
-              <img  class="mx-auto" style="height:70px;width: 70px;" src="https://dummyimage.com/51x50/be68e6/0011ff">
-            </div>
-            <div class="row ">
-              <div class="col-12 text-center py-3">
-                <h6>What do we work with?</h6>
-                <p class="desp_style px-3">
-                  Companies that have large online marketplaces and want to empower their users to participate in the platform’s economy and drive its growth.
-                </p>
-              </div>
-
+        <div class="col-12 col-md-4 mt-5">
+          <div class=" row ">
+            <div class="col-12 text-left text-md-center">
+              <img  class="mx-auto" style="height:75px;" src="container-partnering-ost-2@3x.png">
+              <h5 class="my-3">What do we look for?</h5>
+              <p class="desc">
+                A strong product – market fit and team (mini-VC process) and commitment to integrate OST and the Blockchain to drive their business.
+              </p>
             </div>
           </div>
-          <div class="col-4">
-            <div class="row">
-              <img class="mx-auto" style="height:70px;width: 70px;" src="https://dummyimage.com/51x50/be68e6/0011ff">
-
-            </div>
-            <div class=" row ">
-              <div class="col-12 text-center py-3">
-                <h6>What do we look for?</h6>
-                <p class="desp_style px-3">
-                  A strong product – market fit and team (mini-VC process) and commitment to integrate OST and the Blockchain to drive their business.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="row">
-              <img class="mx-auto" style="height:70px;width: 70px;" src="https://dummyimage.com/51x50/be68e6/0011ff">
-
-            </div>
-            <div class="row">
-              <div class="col-12 text-center py-3">
-                <h6>How do we select?</h6>
-                <p class="desp_style px-3">
-                  Assessment by the Opportunity Committee that includes board members of the OpenST Foundation that offers the partnerships and awards the grant.
-                </p>
-              </div>
+        </div>
+        <div class="col-12 col-md-4 mt-5">
+          <div class="row">
+            <div class="col-12 text-left text-md-center">
+              <img class="mx-auto" style="height:75px;" src="container-partnering-ost-3@3x.png">
+              <h5 class="my-3">How do we select?</h5>
+              <p class="desc">
+                Assessment by the Opportunity Committee that includes board members of the OpenST Foundation that offers the partnerships and awards the grant.
+              </p>
             </div>
           </div>
         </div>
       </div>
-
+    </div>
+  </div>
 
 </div>
