--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -7,7 +7,7 @@
         <div class="col-12 col-md-4 mt-5">
           <div class="row ">
             <div class="col-12 text-left text-md-center">
-              <img  class="mx-auto" style="height:75px;" src="container-partnering-ost-1@3x.png">
+              <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-1@3x.png">
               <h5 class="my-3">What do we work with?</h5>
               <p class="desc">
                 Companies that have large online marketplaces and want to empower their users to participate in the platform’s economy and drive its growth.
@@ -18,7 +18,7 @@
         <div class="col-12 col-md-4 mt-5">
           <div class=" row ">
             <div class="col-12 text-left text-md-center">
-              <img  class="mx-auto" style="height:75px;" src="container-partnering-ost-2@3x.png">
+              <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-2@3x.png">
               <h5 class="my-3">What do we look for?</h5>
               <p class="desc">
                 A strong product – market fit and team (mini-VC process) and commitment to integrate OST and the Blockchain to drive their business.
@@ -29,7 +29,7 @@
         <div class="col-12 col-md-4 mt-5">
           <div class="row">
             <div class="col-12 text-left text-md-center">
-              <img class="mx-auto" style="height:75px;" src="container-partnering-ost-3@3x.png">
+              <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-3@3x.png">
               <h5 class="my-3">How do we select?</h5>
               <p class="desc">
                 Assessment by the Opportunity Committee that includes board members of the OpenST Foundation that offers the partnerships and awards the grant.
