new partners page

--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -1,4 +1,4 @@
-<div  id="partner-companies" class="container-partner-companies position-relative" style="overflow:hidden;">
+<section id="partner-companies" class="container-partner-companies position-relative" style="overflow:hidden;">
   <div class="ost-backward-triangle"></div>
   <div class="container-fluid">
     <div class="row">
@@ -80,4 +80,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
