--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid container-partnering-ost">
+<section class="container-fluid container-partnering-ost">
 
   <div class="row">
     <div class="container">
@@ -35,4 +35,4 @@
     </div>
   </div>
 
-</div>
+</section>
