new partners page

--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid container-industries ost pt-5 position-relative" id="discoverproducts" style="overflow: hidden">
   <div class="row align-items-center">
-    <div class="col col-md-8 mx-auto text-center">
+    <div class="col col-md-10 col-xl-8 mx-auto text-center">
       <div class="row">
         <div class="col-12 col-md-8 mx-auto">
           <h2 class="mb-4">Industries</h2>
