new partners page

--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -1,6 +1,9 @@
-<section id="partner-companies" class="container-partner-companies position-relative" style="overflow:hidden;">
+<section id="partner-companies" class="container-partner-companies position-relative pt-5" style="overflow:hidden;">
   <div class="ost-backward-triangle"></div>
   <div class="container-fluid">
+    <div>
+      <h2 class="mt-5 mb-4 text-center">Partner Companies</h2>
+    </div>
     <div class="row">
       <div class="col-12">
 
