--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -110,11 +110,20 @@
     font-size: 0.875rem;
     color: $steel-teal;
     margin-bottom: .2rem;
+
+
+
   }
+
 
   .info-text{
     font-size: 0.7rem;
   }
+
+  .label-checkbox{
+    font-size: 10px;
+  }
+
 
   .input-container {
     padding: 0;
