--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -105,6 +105,10 @@
     font-size: 0.875rem;
     letter-spacing: 2px;
   }
+  
+  .industry{
+    cursor: pointer;
+  }
 }
 
 .container-partnering-ost{
