--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="creative-social">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
@@ -18,7 +18,7 @@
           </svg>
           <div class="title-text mt-2">CREATIVE & SOCIAL</div>
         </div>
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="loyalty">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-loyalty"></use>
@@ -26,7 +26,7 @@
           </svg>
           <div class="title-text mt-2">LOYALTY</div>
         </div>
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="dapps">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
@@ -34,7 +34,7 @@
           </svg>
           <div class="title-text mt-2">DAPPS</div>
         </div>
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="marketplaces">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
@@ -42,7 +42,7 @@
           </svg>
           <div class="title-text mt-2">MARKETPLACES</div>
         </div>
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="community">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-community"></use>
@@ -50,7 +50,7 @@
           </svg>
           <div class="title-text mt-2">COMMUNITY</div>
         </div>
-        <div class="col-6 col-md-4 my-4">
+        <div class="col-6 col-md-4 my-4 industry" data-category="sharing-economy">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sharing-economy"></use>
