--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-industries ost pt-5 position-relative" id="discoverproducts" style="overflow: hidden">
+<section class="container-fluid container-industries pt-5 position-relative" id="discoverproducts" style="overflow: hidden">
   <div class="row align-items-center">
     <div class="col col-md-10 col-xl-8 mx-auto text-center">
       <div class="row">
