--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -87,7 +87,9 @@
   ]
 %>
 <section id="partner-companies" class="container-partner-companies position-relative pt-5" style="overflow:hidden;">
-  <div class="ost-backward-triangle dark-blue"></div>
+  <div class="ost-backward-triangle dark-blue">
+    <div class="container dotted-bg"></div>
+  </div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
