--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -38,11 +38,22 @@
                       title="SHORT PROJECT DESCRIPTION & COMMENTS" style="resize:none" rows="4" cols="50"></textarea>
           </div>
 
-          <div class=" form-check ">
-            <label class="form-check-label label-checkbox">
+          <div class="form-group m-0">
+            <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
+              <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
+                <div class="checkbox">
+                  <svg width="18px" height="18px" viewBox="0 0 20 20">
+                    <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                    <polyline points="4 11 8 15 16 6"></polyline>
+                  </svg>
+                </div>
+                <span class="font-weight-normal info-text text-left">
 
-              <input type="checkbox" class=" form-check-input " >            By submitting the info below you will be contacted via email about the OST KYC product. Please refer to the OST Privacy Policy for more information.
+                  By submitting the info below you will be contacted via email about the OST KYC product. Please refer to the OST Privacy Policy for more information.
+                </span>
+
             </label>
+            <div class="error confirmation_error text-left" data-for="subscribe_confirmation"></div>
           </div>
           <div class="error" data-for="project_description"></div>
 
