--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -31,12 +31,29 @@
 //    }
 //  }
 
+  .border-box{
+    position: relative;
+    &:after, &:before{
+      height: 14px;
+      width: 14px;
+      position: absolute;
+      content: '';
+      opacity: 0.1;
+    }
+    &:before{
+      right: -2px; top: -2px; border-right: 2px dotted green; border-top: 2px dotted green;;
+    }
+    &:after{
+      left: 0; bottom: 0; border-left: 2px dotted green; border-bottom: 2px dotted green;;
+    }
+  }
+
   .aspect-ratio-box {
     height: 0;
     overflow: hidden;
     padding-top: 47px / 72px * 100% ;
-    background: #FFFFFF;
-    position: relative;
+//    background: #FFFFFF;
+//    position: relative;
     color: #000;
     &:hover{
       .aspect-ratio-box-inside{
