--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -31,6 +31,17 @@
 //    }
 //  }
 
+
+  .filter-style{
+    font-weight: 800;
+    font-size: 15px;
+    color: #438bad;
+  }
+  .border-class{
+    border-left: 0.6px solid #597a84;
+    height: 70px;
+
+  }
   .aspect-ratio-box {
     height: 0;
     overflow: hidden;
