--- a/app/views/web/ost/new-partners/_contact_us.erb
+++ b/app/views/web/ost/new-partners/_contact_us.erb
@@ -4,7 +4,7 @@
     <div class="container mx-auto">
       <div class="row">
         <div class="col-12 col-md-6 mx-auto text-center">
-          <h2>Contact Us</h2>
+          <h2 class="mt-5 mb-3">Contact Us</h2>
           <p class="mb-4">Connect with us if you are interested in exploring how the Simple Token solution can apply to your business.</p>
         </div>
       </div>
@@ -62,7 +62,7 @@
             <div class="g-recaptcha form-recapcha-wrap" data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
             <div class="error" data-for="recaptcha" style="text-align: center"></div>
           </div>
-          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">SUBMIT</button>
+          <button type="submit" class="btn btn-primary" id="partners-contact-us-submit" style="margin: 0 auto;display: block;" title="Submit">MESSAGE US</button>
           <div class="error text-center" data-for="general_error"></div>
         </form>
 
