--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -93,7 +93,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h2 class="mt-5 mb-4 text-center">Partner Companies</h2>
+        <h2 class="mt-5 pt-4 mb-4 text-center">Partner Companies</h2>
       </div>
     </div>
     <div class="row">
@@ -103,7 +103,7 @@
 
           <div class="col-6">
             <div class="form-group">
-              <label for="categorySelect">Category</label>
+              <label for="categorySelect" class="filter-style">CATEGORY</label>
               <select class="form-control" id="categorySelect">
                 <option>all</option>
                 <option>creative-social</option>
@@ -115,9 +115,9 @@
               </select>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-6 border-class">
             <div class="form-group">
-              <label for="sizeSelect">Size</label>
+              <label for="sizeSelect" class="filter-style">SIZE</label>
               <select class="form-control" id="sizeSelect">
                 <option>all</option>
                 <option>large</option>
