team and careers page updates by Ignas

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -20,7 +20,7 @@
                                 linkedIn: 'https://www.linkedin.com/in/jasonsethgoldberg/',
                                 twitter: 'https://twitter.com/betashop/',
                                 medium: 'https://medium.com/@betashop/',
-                                description: "Jason Goldberg is a veteran internet entrepreneur with a 18 year history of scaling products to millions of users. Since 2016 Jason’s passion has been to drive mainstream consumer adoption of blockchain technologies. Jason splits time between Berlin, Germany, Pune, India, and Hong Kong."
+                                description: "Jason Goldberg is a veteran internet entrepreneur with an 18 year history of scaling products to millions of users. Since 2016 Jason’s passion has been to drive mainstream consumer adoption of blockchain technologies. Jason splits time between Berlin, Germany, Pune, India, and Hong Kong."
                             },
                             {
                                 name: "Sunil Khedar",
@@ -64,7 +64,7 @@
                             },
                             {
                                 name: "Paul J du Plessis",
-                                title: "Director Market Development",
+                                title: "Business Development Director EMEA",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Paul-J-du-Plessis.png",
                                 linkedIn: 'https://www.linkedin.com/in/pauljduplessis/',
                                 twitter: 'https://twitter.com/paulduplessis/',
@@ -343,7 +343,7 @@
                             },
                             {
                                 name: "Kevin Parulekar",
-                                title: "Business Development Director",
+                                title: "Business Development Director AMER",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Kevin-Parulekar.png",
                                 linkedIn: 'www.linkedin.com/in/kevin-parulekar-b5035288',
                                 description: "Kevin Parulekar is the Director of Business Development for OST in the Americas. He brings over 15 years of experience leading global teams in strategy consulting, fintech, and social impact. As a former tech founder and development banker, Kevin is fascinated by the potential for blockchain technologies to transform humanity."
@@ -410,6 +410,34 @@
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
                                 linkedIn: 'https://in.linkedin.com/in/dhananjay08patil',
                                 description: "Dhananjay joined Pune team as Software Engineer. He is a Computer Science graduate from University of Pune with a keen interest in programming and technologies. He loves to build highly scalable applications using cutting-edge technologies. Dhananjay is also enthusiastic about soccer and trekking."
+                            },
+                            {
+                              name: "Jean Wang",
+                              title: "Business Development Director APAC",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
+                              linkedIn: 'https://www.linkedin.com/in/jeanwangonline/',
+                              description: "As an ex-engineer and ex-investment banker, Jean is passionate about the latest trends in Fintech. He joins OST with over 14 years of professional experience and will lead Business Development efforts in Asia, building partnerships and helping companies unlock their growth potential. Jean holds a MS in Electrical Engineering from Caltech, and a MBA from the University of Chicago."
+                            },
+                            {
+                              name: "Martin Schenck",
+                              title: "Senior Blockchain Engineer",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
+                              linkedIn: 'https://www.linkedin.com/in/martinschenck/',
+                              description: "Martin is a blockchain engineer who is bringing blockchain technology to the masses. Before joining OST, Martin was the hands-on CTO of Plugsurfing, Europe’s largest roaming platform for electric vehicle charging. He led the Plugsurfing platform from its infancies to a successful exit within five years. Martin is generally interested in advanced (software) systems and solving daring challenges."
+                            },
+                            {
+                              name: "Ankit Singh",
+                              title: "Senior Software Engineer",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
+                              linkedIn: 'https://www.linkedin.com/in/ankit-singh-2099/',
+                              description: "Ankit Singh is a tech enthusiast. He has received engineering degree from VNIT Nagpur. His previous experience includes working with retail banking systems. Ankit likes to travel and learn about different cultures. He loves to play cricket and basketball in his spare time."
+                            },
+                            {
+                              name: "Preshita Shirke",
+                              title: "Software Engineer",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
+                              linkedIn: 'https://www.linkedin.com/in/preshita-shirke-1109a0aa/',
+                              description: "A computer science engineering graduate from VJTI, Mumbai, Preshita has extensive 3 year working experience in frontend technologies. When not following her passion of learning and exploring new technologies she spends her time cooking and travelling."
                             }
                             ];
 
