--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -5,84 +5,84 @@
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["dapps", "marketplaces"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["community", "sharing-economy"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["creative-social", "loyalty"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["dapps", "marketplaces"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["community", "sharing-economy"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["creative-social", "loyalty"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["dapps", "marketplaces"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["community", "sharing-economy"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["creative-social", "loyalty"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["dapps", "marketplaces"],
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
       {
           categories: ["community", "sharing-economy"],
           size: "start-ups",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_existed: false
+          has_exited: false
       },
   ]
 %>
