--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -135,11 +135,34 @@
         <div class="col-6 col-md-3 p-0 category-all size-all <%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
           <div class="border-box">
             <div class="aspect-ratio-box" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
-              <span class="aspect-ratio-box-inside"></span>
+              <span class="aspect-ratio-box-inside"  data-toggle="modal" data-target="#infoModal"></span>
             </div>
           </div>
         </div>
       <% end %>
+    </div>
+  </div>
+  <div class="modal fadeInRightBig" id="infoModal" >
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Modal Heading</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          Modal body..
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
     </div>
   </div>
 </section>
