--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -103,8 +103,8 @@
 
           <div class="col-6">
             <div class="form-group">
-              <label for="categorySelect" class="filter-style">CATEGORY</label>
-              <select class="form-control" id="categorySelect">
+              <label for="categorySelect" class="filter-style">Category</label>
+              <select class="form-control selectpicker" id="categorySelect">
                 <option>all</option>
                 <option>creative-social</option>
                 <option>loyalty</option>
@@ -118,7 +118,7 @@
           <div class="col-6 border-class">
             <div class="form-group">
               <label for="sizeSelect" class="filter-style">SIZE</label>
-              <select class="form-control" id="sizeSelect">
+              <select class="form-control selectpicker" id="sizeSelect">
                 <option>all</option>
                 <option>large</option>
                 <option>start-ups</option>
