--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -5,7 +5,29 @@
           size: "large",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_exited: false
+          has_exited: false,
+          description_html: '',
+          founders: [
+              {
+                  name: '',
+                  title: ''
+              },
+              {
+                  name: '',
+                  title: ''
+              },
+              {
+                  name: '',
+                  title: ''
+              }
+          ],
+          location: '',
+          website: '',
+          social: {
+              twitter: '',
+              medium: '',
+              linkedin: ''
+          }
       },
       {
           categories: ["dapps", "marketplaces"],
@@ -135,7 +157,7 @@
         <div class="col-6 col-md-3 p-0 category-all size-all <%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
           <div class="border-box">
             <div class="aspect-ratio-box" title="<%= 'category-'+partner[:categories].join(" category-") %> size-<%= partner[:size] %>">
-              <span class="aspect-ratio-box-inside"  data-toggle="modal" data-target="#infoModal"></span>
+              <span class="aspect-ratio-box-inside"  data-toggle="modal" data-target="#infoModal" data-partner_companies_index="<%=index %>"></span>
             </div>
           </div>
         </div>
@@ -166,3 +188,15 @@
     </div>
   </div>
 </section>
+
+<% content_for :end_js do %>
+  <script>
+      $(document).ready(function () {
+          ost.partners.companies.init(
+              {
+                  partner_companies: <%= raw partner_companies.to_json %>
+              }
+          );
+      });
+  </script>
+<% end %>
