--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -21,9 +21,9 @@
 
   .filter-style{
     color: #438bad;
-    font-size: 0.875rem;
+    font-size: 0.8rem;
     letter-spacing: 0.7px;
-    font-weight: $font-weight-normal;
+    font-weight: $font-weight-500;
     text-transform: uppercase;
   }
   .border-class{
@@ -33,13 +33,25 @@
 
   .bootstrap-select{
     .dropdown-toggle{
-      line-height: 100%;
       opacity: 0.5;
       border-radius: 0;
+      line-height: 100%;
+      text-transform: capitalize;
+      background-color: transparent;
+      padding: .5rem 1.6rem .5rem 0;
       border-bottom: solid 0.6px #3c5056;
-      padding: .75rem 1.6rem .75rem 0;
       &:focus{
         outline: none!important;
+      }
+      &:after{
+        border: none;
+        width: 15px;
+        height: 15px;
+        position: absolute;
+        background: url(https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/drop-down-arrow.svg) no-repeat center;
+      }
+      .filter-option{
+        min-height: 18px;
       }
     }
     .dropdown-menu{
