--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -97,7 +97,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 mx-auto">
+      <div class="col-md-6 col-lg-4 col-xl-3 mx-auto">
 
         <div class="row">
 
