--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -142,25 +142,25 @@
       <% end %>
     </div>
   </div>
-  <div class="modal fadeInRightBig" id="infoModal" >
-    <div class="modal-dialog">
+  <div class="modal fade right" id="infoModal">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
 
         <!-- Modal Header -->
         <div class="modal-header">
-          <h4 class="modal-title">Modal Heading</h4>
+          <h4>Unsplash</h4>
+
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
 
         <!-- Modal body -->
         <div class="modal-body">
-          Modal body..
+          <div class='row'>
+
+          </div>
         </div>
 
         <!-- Modal footer -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
 
       </div>
     </div>
